tests/reference/asr-incompatible_dimension_logical_arrays_logical_binop_02-5be1708.stderr
semantic error: Shapes for operands are not conformable
 --> tests/errors/incompatible_dimension_logical_arrays_logical_binop_02.f90:4:14
  |
4 |     print *, x1 .neqv. x2
  |              ^^        ^^ 
